# semantic_clustering_app_public

./: LICENSE  README.md  app.py  pyproject.toml  test.csv  test_synthetic_data.csv
.streamlit/: config.toml
modules/: clustering.py  embeddings.py  nav.py
pages/: 1_Data_Management.py  2_Semantic_Clustering.py  3_Cluster_Keyword_Extraction.py  4_Document_level_Keywords.py  5_LLM_Prompt_Generation.py  6_LLM_Prompt_Execution.py
