[project]
name = "streamlit-clustering-app"
version = "0.1.0"
description = "A Streamlit application that interfaces with a llama.cpp served word embedding model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "hdbscan>=0.8.29",
    "scikit-learn>=1.3.0",
    "plotly>=5.15.0",
    "matplotlib>=3.5.0",
    "scipy>=1.10.0",
    "torch",
    "bertopic>=0.17.3",
    "openai>=2.11.0",
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "torch-cpu", marker = "sys_platform == 'linux'"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["modules"]
